# email-drone

./: .gitignore  README.md
agents/: .env.example  pyproject.toml
agents/src/agents/: __init__.py  definitions.py  utils.py
agents/src/agents/defs/calendar_agent/: assets.py  defs.py  resources.py  workflows.py
agents/src/agents/defs/email_actions/: resources.py
agents/src/agents/defs/email_agent/: assets.py  defs.py  prompts.py  workflows.py
agents/src/agents/defs/jobs/: agent_jobs.py  coordination_jobs.py
agents/src/agents/defs/notion_agent/: assets.py  defs.py  prompts.py  resources.py  workflows.py
agents/src/agents/defs/schedules/: daily_schedules.py  weekly_schedules.py
agents/src/agents/defs/sensors/: calendar_sensors.py  email_sensors.py  notion_sensors.py
agents/tests/: test_coordination.py
agents/tests/calendar_agent/: test_assets.py
agents/tests/email_agent/: test_assets.py
agents/tests/notion_agent/: test_assets.py
